refactor(category): Improve readability
Signed-off-by: Josenaldo de Oliveira Matos Filho <josenaldo@gmail.com>